# wildmatch

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
benches/: patterns.rs
src/: lib.rs
