[package]
name = "wildmatch"
version = "2.2.0"
authors = ["Armin Becher <armin.becher@gmail.com>"]
edition = "2018"
description = "Simple string matching  with questionmark and star wildcard operator."
keywords = ["globbing", "matching", "questionmark", "star", "string-matching"]
readme = "README.md"
license = "MIT"
categories = ["algorithms"]
repository = "https://github.com/becheran/wildmatch"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
ntest = "0.7.3"
criterion = "0.3.4"
regex = "1.4.3"
glob = "0.3.0"

[features]
serde = ["dep:serde"]

[[bench]]
name = "patterns"
harness = false
