[package]
name = "wildmatch"
version = "2.2.0"
authors = ["Armin Becher <armin.becher@gmail.com>"]
edition = "2018"
description = "Simple string matching with single- and multi-character wildcard operator."
keywords = ["globbing", "matching", "questionmark", "star", "string-matching"]
readme = "README.md"
license = "MIT"
categories = ["algorithms"]
repository = "https://github.com/becheran/wildmatch"

[dependencies]
tinyvec = { version = "1.6", default-features = false, features = ["alloc"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ntest = { version = "0.7.3", default-features = false }
criterion = { version = "0.3.4", default-features = false }
regex = { version = "1.4.3", default-features = false }
glob = { version = "0.3.0", default-features = false }

[features]
default = ["std"]
std = ["serde?/std"]
no_std = ["dep:tinyvec"]
serde = ["dep:serde", "tinyvec?/serde"]

[[bench]]
name = "patterns"
harness = false
