[package]
name = "wildmatch"
version = "2.5.0"
authors = ["Armin Becher <armin.becher@gmail.com>"]
edition = "2018"
description = "Simple string matching with single- and multi-character wildcard operator."
keywords = ["globbing", "matching", "questionmark", "star", "string-matching"]
readme = "README.md"
license = "MIT"
categories = ["algorithms"]
repository = "https://github.com/becheran/wildmatch"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ntest = { version = "0.9.0", default-features = false }
criterion = { version = "0.5.1", default-features = false }
regex = { version = "1.10.2", default-features = false }
glob = { version = "0.3.1", default-features = false }
regex-lite = {version = "0.1.5"}
rand = {version = "0.8.5"}

[features]
serde = ["dep:serde"]

[[bench]]
name = "patterns"
harness = false
